--- a/src/components/NavBar/style.module.css
+++ b/src/components/NavBar/style.module.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     padding-right: 35px;
     padding-left: 35px;
+    
 }
 .randomHouseLogo {
     height:60px;
@@ -13,4 +14,6 @@
     position:absolute;
     top:0;
     background-color: transparent !important;
+    z-index:9999;
+    margin-bottom: 70px;
 }
