--- a/src/components/CharacterList/style.module.css
+++ b/src/components/CharacterList/style.module.css
@@ -1,26 +1,57 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
+
+
+h1,
+p, button {
+    font-family: "Montserrat", sans-serif;
+}
+
 .buttonContainer {
     position: relative;
+ 
 }
 
 .characterButton {
-    padding: 30px;
+    padding: 40px;
     background-color: transparent;
     width: 100%;
     color: white;
     border-color: white;
     border: 0px;
     border-bottom: 3px solid;
-    position: relative;
+    position:relative;
+    z-index:3;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: right;
+    text-transform: uppercase;
+
 }
 
 .characterListVerticalScroll {
     overflow-y: scroll;
+    background-image: linear-gradient(to right, rgba(151, 151, 151, 0.26), rgba(255,255,255,0));
+    -webkit-filter: drop-shadow(5px 5px 5px #222);
+    filter: drop-shadow(5px 5px 5px #222);
 }
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    display: none;
+}
+
+/* 
 .houseImage {
-    height: 100%;
-    z-index: -1;
-    position: absolute;
     opacity: 0.5;
-    right:0;
-    bottom: 0;
-}
+    height:100px;
+    z-index:0;
+    
+    position:fixed;
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+ } */
+
