--- a/src/pages/Characters/style.module.css
+++ b/src/pages/Characters/style.module.css
@@ -11,56 +11,37 @@ p {
     flex-direction: row;
     justify-content: space-between;
     height: 100vh;
-    background-color: white;
-}
-
-.charactersPageContainer::before {
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     background-image: url("../../assets/images/targaryen_background.jpg");
-    filter: brightness(30%);
-    position: absolute;
 }
 
 .charactersListContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    z-index: 1;
     max-height: 100vh;
     margin-top: 70px;
     overflow: hidden;
-
-
-}
-
-.charactersInfoContainer {
-    display: flex;
-    flex-direction:;
-    justify-content: space-around;
-
-    
-
+    min-width: 250px;
 }
 
 .characterDescriptionContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.charactersInfoContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     margin-left: 80px;
-    position:relative;
+    position: relative;
 }
 
 .characterDescription {
     color: white;
     font-size: larger;
     float: right;
-    padding: 0 0 20px 20px;
-    inline-size: 600px; 
-
 }
 
 .characterName {
@@ -87,11 +68,5 @@ p {
     -webkit-filter: drop-shadow(5px 5px 5px #222);
     filter: drop-shadow(5px 5px 5px #222);
     object-fit: contain;
-    height: auto;
 
 }
-
-
-
-
-
