--- a/src/pages/Characters/style.module.css
+++ b/src/pages/Characters/style.module.css
@@ -6,67 +6,89 @@ p {
     font-family: "Montserrat", sans-serif;
 }
 
+
+
 .charactersPageContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    height: 100vh;
+    justify-content: center;
+    min-height: 100vh;
     background-image: url("../../assets/images/targaryen_background.jpg");
+    width: 100%;
+
 }
 
 .charactersListContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-height: 100vh;
     margin-top: 70px;
     overflow: hidden;
     min-width: 250px;
+    height: 93.5vh;
 }
 
-.characterDescriptionContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
 
 .charactersInfoContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    margin-left: 80px;
-    position: relative;
+    justify-content: space-between;
+    margin-top: 80px;
+    margin-left: 30px;
+    width:100%;
+
+}
+
+.characterTextContainer {
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    width:100%;
+    float:right;
+    height:auto;
 }
 
 .characterDescription {
     color: white;
     font-size: larger;
-    float: right;
+    padding: 10px;
+
+
+}
+
+.characterImageContainer {
+    display:flex;
+    flex-direction:column;
+    justify-content: flex-end;
+    width:100%;
+}
+
+.characterImage {
+    -webkit-filter: drop-shadow(5px 5px 5px #222);
+    filter: drop-shadow(5px 5px 5px #222);
 }
 
 .characterName {
     color: white;
     font-size: 80px;
     text-transform: uppercase;
-    position: relative;
-    margin-top: 80px;
     z-index: 2;
     margin-bottom: 70px;
+    display: inline-block;
 }
 
 .characterTitle {
     color: white;
     font-size: 40px;
     text-transform: uppercase;
-    position: relative;
     z-index: 2;
     margin-bottom: 70px;
 }
 
-.characterImage {
-    z-index: 3;
-    -webkit-filter: drop-shadow(5px 5px 5px #222);
-    filter: drop-shadow(5px 5px 5px #222);
-    object-fit: contain;
 
+
+@media (max-width: 1199.98px) {
+    .charactersListContainer {
+        display: none;
+    }
 }
