--- a/src/pages/Home/style.module.css
+++ b/src/pages/Home/style.module.css
@@ -1,7 +1,7 @@
 .homeBackground {
     background-image: url("../../assets/images/1260061.jpg");
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -32,7 +32,7 @@
 .optionBackground {
     background-image: url("../../assets/images/wallpaperflare.com_wallpaper.jpg");
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
