--- a/src/pages/HouseDetail/style.module.css
+++ b/src/pages/HouseDetail/style.module.css
@@ -1,12 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 
-.houseDetailContainer {
-    color:white;
-    padding-top: 400px;
-}
-
-.houseContainer {
+.backgroundContainer {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -17,12 +12,62 @@
     background-repeat: no-repeat;
 }
 
+.houseContainer {
+    padding-top: 120px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    height:fit-content;
+
+}
+
+.houseDescriptionContainer {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-self: center;
+    flex-wrap:wrap;
+    padding:40px;
+    height:fit-content;
+    background: rgba(15, 15, 15, 0.322);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    backdrop-filter: blur( 2.5px );
+    -webkit-backdrop-filter: blur( 2.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
 .houseText {
-    margin-top: 80px;
     color: white;
     font-size: 80px;
     text-transform: uppercase;
-    z-index: 2;
-    margin-bottom: 70px;
-    display: inline-block;
+    text-align: center;
+    text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.8);
+}
+
+.houseDescription {
+    color: white;
+    font-size: 20px;
+    text-align: left;
+    text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.8);
+    white-space: pre-line
+
+   
+}
+
+.houseImagesContainer {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.houseSigil {
+    -webkit-filter: drop-shadow(5px 5px 5px #222);
+    filter: drop-shadow(5px 5px 5px #222);
+    height: 700px;
+    width: 360px;
 }
