--- a/src/pages/Houses/style.module.css
+++ b/src/pages/Houses/style.module.css
@@ -3,12 +3,50 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 100%;
     min-height: 100vh;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: black;
+    width: 100%;
+}
+
+.backgroundVideo {
+    min-height: 100vh;
+    width: 100%;
+    position: fixed;
+}
+
+@media (min-aspect-ratio: 16/9) {
+    .backgroundVideo {
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media (max-aspect-ratio: 16/9) {
+    .backgroundVideo {
+        width: auto;
+        height: 100%;
+    }
+}
+
+@media (max-width: 1300px) {
+    .backgroundVideo {
+        display: none;
+    }
+    .container {
+        background: url("../../assets/images/westerosmap.jpg");
+        width: 100%;
+        min-height: 100vh;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+}
+
+.cardsContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 60px;
 }
 
 .container .card {
@@ -24,15 +62,15 @@
 }
 
 .container .card:nth-child(1) .box .content a {
-    background: #2196f3;
+    background: black;
 }
 
 .container .card:nth-child(2) .box .content a {
-    background: #e91e63;
+    background: #B13325;
 }
 
 .container .card:nth-child(3) .box .content a {
-    background: #23c186;
+    background: #F1B62E;
 }
 
 .card {
