--- a/src/pages/Home/style.module.css
+++ b/src/pages/Home/style.module.css
@@ -50,8 +50,8 @@
 }
 
 a {
-    color: inherit; 
-    text-decoration: inherit; 
+    color: inherit;
+    text-decoration: inherit;
 }
 
 .optionBoxesContainer {
@@ -71,7 +71,7 @@ a {
     margin-bottom: 20px;
     max-width: 1000px;
     overflow: hidden;
-    flex:40%;
+    flex: 40%;
     background: rgba(255, 255, 255, 0.15);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(11px);
@@ -90,7 +90,6 @@ a {
     transition: transform 0.5s;
     display: flex;
 }
-
 
 .optionBoxImage:hover {
     transform: scale3d(1.08, 1.08, 0.5);
@@ -114,7 +113,7 @@ a {
 
 .link {
     cursor: pointer;
-    
+
     position: relative;
     white-space: nowrap;
     color: var(--color-text);
@@ -124,7 +123,6 @@ a {
     color: white;
     font-size: 70px;
 }
-
 
 .link::before,
 .link::after {
@@ -138,7 +136,7 @@ a {
 }
 
 .link::before {
-    content: '';
+    content: "";
     /* show by default */
 }
 
@@ -146,24 +144,43 @@ a {
     font-size: 1.375rem;
 }
 
-
 .linkElara::before {
     transform-origin: 50% 100%;
     transition: clip-path 0.3s, transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
-    clip-path: polygon(0% 0%, 0% 100%, 0 100%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%, 100% 100%, 100% 0%);
+    clip-path: polygon(
+        0% 0%,
+        0% 100%,
+        0 100%,
+        0 0,
+        100% 0,
+        100% 100%,
+        0 100%,
+        0 100%,
+        100% 100%,
+        100% 0%
+    );
 }
 
 .linkElara:hover::before {
     transform: translate3d(0, 2px, 0) scale3d(1.08, 3, 1);
-    clip-path: polygon(0% 0%, 0% 100%, 50% 100%, 50% 0, 50% 0, 50% 100%, 50% 100%, 0 100%, 100% 100%, 100% 0%);
+    clip-path: polygon(
+        0% 0%,
+        0% 100%,
+        50% 100%,
+        50% 0,
+        50% 0,
+        50% 100%,
+        50% 100%,
+        0 100%,
+        100% 100%,
+        100% 0%
+    );
 }
 
 .linkElara span {
     display: inline-block;
     transition: transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
 }
-
-
 
 .linkElara:hover span {
     transform: translate3d(0, -2px, 0);
@@ -180,5 +197,57 @@ a {
     }
     .gotLogoDesktop {
         display: none;
+    }
+}
+
+.whiteArrowContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  
+}
+
+.whiteArrowContainer a span {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    bottom:0;
+    margin-bottom:80px;
+    width: 80px;
+    height: 80px;
+    border-left: 3px solid #fff;
+    border-bottom:3px solid #fff;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: sdb05 1.5s infinite;
+    animation: sdb05 1.5s infinite;
+    box-sizing: border-box;
+}
+@-webkit-keyframes sdb05 {
+    0% {
+        -webkit-transform: rotate(-45deg) translate(0, 0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        -webkit-transform: rotate(-45deg) translate(-20px, 20px);
+        opacity: 0;
+    }
+}
+@keyframes sdb05 {
+    0% {
+        transform: rotate(-45deg) translate(0, 0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        transform: rotate(-45deg) translate(-20px, 20px);
+        opacity: 0;
     }
 }
