--- a/src/components/CharacterList/style.module.css
+++ b/src/components/CharacterList/style.module.css
@@ -8,22 +8,61 @@ button {
 }
 
 .buttonContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
     flex-wrap: nowrap;
-    width:25%;
-    display:inline;
-
-
+    width: 25%;
+    display: flex;
 }
 
 
+
+.buttonBackground {
+    flex-wrap: nowrap;
+    width: 25%;
+    display:flex;
+}
+
+button {
+    background: none;
+	color: inherit;
+	border: none;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+    padding:0;
+}
+
+.characterButton {
+    padding:40px;
+}
+
+
+.buttonBackground {
+    background-color: transparent;
+    color: white;
+    border: 0px;
+    float: none;
+    z-index: 3;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right;
+    border-radius: var(--spacing-l);
+    filter: brightness(0.75) saturate(1.2) contrast(0.85);
+    transform-origin: center;
+    transform: scale(1) translateZ(0);
+    transition: filter 200ms linear, transform 200ms linear;
+}
+.buttonContainer:hover {
+    transform: scale(1.05) translateZ(0);
+}
+
+.characterListHorizontalScroll:hover > .buttonContainer:not(:hover) {
+    filter: brightness(0.5) saturate(0) contrast(1.2) blur(5px);
+}
 .characterListHorizontalScroll {
     white-space: nowrap;
     position: relative;
-    overflow-x:scroll;
-    overflow-y:hidden;
+    overflow-x: scroll;
+    overflow-y: hidden;
     background-image: linear-gradient(
         to right,
         rgba(151, 151, 151, 0.26),
@@ -31,38 +70,29 @@ button {
     );
     -webkit-filter: drop-shadow(5px 5px 5px #222);
     filter: drop-shadow(5px 5px 5px #222);
+    display:flex;
+    flex-direction: row;
 }
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 12px;
 }
 
-::-webkit-scrollbar-thumb:horizontal
-{
-    background-image: url('../../assets/images/long_claw.png');
+::-webkit-scrollbar-thumb:horizontal {
+    background-image: url("../../assets/images/long_claw.png");
     background-repeat: no-repeat;
     background-position: center;
-    background-size:300px 30px;
+    background-size: 300px 30px;
     display: block;
     background-color: rgba(255, 255, 255, 0.205);
-   
 }
 
-.characterButton {
-    padding: 40px;
-    background-color: transparent;
+
+
+
+.characterName {
     color: white;
-    border-color: white;
-    border: 0px;
-    border-bottom: 3px solid;
-    float: none;
-    z-index: 3;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: right;
-    text-transform: uppercase;
-    display: inline-block;
+    font-size: 1.5rem;
+    text-shadow: 2px 2px 20px rgba(0,0,0,0.2);
+    line-height: 1.4;
+  
 }
-
-
-
-
