--- a/src/pages/Characters/style.module.css
+++ b/src/pages/Characters/style.module.css
@@ -34,6 +34,7 @@ p {
     margin-top:80px;
 }
 
+
 .characterTextContainer {
     display:flex;
     flex-direction:column;
@@ -57,8 +58,8 @@ p {
     display:flex;
     flex-direction:column;
     justify-content: flex-end;
-    flex:1;
     height:auto;
+    min-width: 800px;
 }
 
 
