--- a/src/pages/Characters/style.module.css
+++ b/src/pages/Characters/style.module.css
@@ -6,71 +6,62 @@ p {
     font-family: "Montserrat", sans-serif;
 }
 
-
-
 .charactersPageContainer {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     min-height: 100vh;
-    background-image: url("../../assets/images/targaryen_background.jpg");
     width: 100%;
-     background-attachment: fixed;
-
-
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
 }
-
 
 .charactersInfoContainer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    flex-wrap:wrap;
-    width:100%;
-
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    flex-grow: 1;
 }
 
 .characterHorizontalScrollContainer {
-    margin-top:80px;
+    margin-top: 80px;
+    display: flex;
 }
 
-
 .characterTextContainer {
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    width:100%;
-    min-width:55%;
-    float:right;
-    height:auto;
-    flex:1;
-    padding:40px;
+    flex: 1;
+    min-width: 55%;
+    height: 100%;
+    padding: 50px;
+    align-self: flex-start;
 }
 
 .characterDescription {
     color: white;
-    font-size: larger;
+    font-size: 1.4em;
     padding: 10px;
-
-
 }
-.characterImageContainer {
-    display:flex;
-    flex-direction:column;
-    justify-content: flex-end;
-    height:auto;
-    min-width: 800px;
-}
-
 
 .characterImage {
     -webkit-filter: drop-shadow(5px 5px 5px #222);
     filter: drop-shadow(5px 5px 5px #222);
+    max-width: 100%;
+    max-height: 100%;
+    height: 100%;
+    align-self: flex-end;
+    flex: 1;
 }
 
 .characterName {
     color: white;
-    font-size: 80px;
+    font-size: 3em;
     text-transform: uppercase;
     z-index: 2;
     margin-bottom: 70px;
@@ -79,10 +70,8 @@ p {
 
 .characterTitle {
     color: white;
-    font-size: 40px;
+    font-size: 2em;
     text-transform: uppercase;
     z-index: 2;
     margin-bottom: 70px;
 }
-
-
