--- a/src/pages/HouseDetail/style.module.css
+++ b/src/pages/HouseDetail/style.module.css
@@ -3,13 +3,15 @@
 
 .backgroundContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     width: 100%;
     min-height: 100vh;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
+    flex-wrap: wrap;
 }
 
 .houseContainer {
@@ -17,8 +19,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    height:fit-content;
-
+    height: fit-content;
 }
 
 .houseDescriptionContainer {
@@ -26,22 +27,28 @@
     flex-direction: column;
     align-content: center;
     align-self: center;
-    flex-wrap:wrap;
-    padding:40px;
-    height:fit-content;
+    flex-wrap: wrap;
+    padding: 40px;
+    height: fit-content;
     background: rgba(15, 15, 15, 0.322);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    backdrop-filter: blur( 2.5px );
-    -webkit-backdrop-filter: blur( 2.5px );
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+        rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+        rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    backdrop-filter: blur(2.5px);
+    -webkit-backdrop-filter: blur(2.5px);
     border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border: 1px solid rgba(255, 255, 255, 0.18);
     margin-left: 30px;
     margin-right: 30px;
 }
 
+.houseDescriptionContainerMobile {
+display:none;
+}
+
 .houseText {
     color: white;
-    font-size: 80px;
+    font-size: 5.5em;
     text-transform: uppercase;
     text-align: center;
     text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.8);
@@ -49,15 +56,21 @@
 
 .houseDescription {
     color: white;
-    font-size: 20px;
+    font-size: 1.5em;
     text-align: left;
     text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.8);
-    white-space: pre-line
-
-   
+    white-space: pre-line;
 }
 
 .houseImagesContainer {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.houseImagesContainer2 {
     display: flex;
     flex-direction: row;
     align-content: center;
@@ -70,4 +83,178 @@
     filter: drop-shadow(5px 5px 5px #222);
     height: 700px;
     width: 360px;
+}
+
+.videoContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    min-height: 100vh;
+    padding-top: 20em;
+
+}
+.videoTitle {
+    color: white;
+    font-size: 4em;
+    text-align: center;
+    text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.8);
+    margin-bottom: 2.5em;
+}
+
+.videoWrapper {
+    position: relative;
+    padding-top: 56.25%;
+
+}
+
+.video {
+    background: rgba(15, 15, 15, 0.322);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+        rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+        rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    backdrop-filter: blur(2.5px);
+    -webkit-backdrop-filter: blur(2.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+.whiteArrowContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.whiteArrowContainer a span {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin-bottom: 80px;
+    width: 80px;
+    height: 80px;
+    border-left: 3px solid #fff;
+    border-bottom: 3px solid #fff;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: sdb05 1.5s infinite;
+    animation: sdb05 1.5s infinite;
+    box-sizing: border-box;
+}
+@-webkit-keyframes sdb05 {
+    0% {
+        -webkit-transform: rotate(-45deg) translate(0, 0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        -webkit-transform: rotate(-45deg) translate(-20px, 20px);
+        opacity: 0;
+    }
+}
+@keyframes sdb05 {
+    0% {
+        transform: rotate(-45deg) translate(0, 0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        transform: rotate(-45deg) translate(-20px, 20px);
+        opacity: 0;
+    }
+}
+
+@media (max-width: 1550px) {
+    .houseDescriptionContainer {
+        display:none;
+    }
+    .houseDescriptionContainerMobile {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        align-self: center;
+        flex-wrap: wrap;
+        padding: 40px;
+        height: fit-content;
+        background: rgba(15, 15, 15, 0.322);
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+            rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+            rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+        backdrop-filter: blur(2.5px);
+        -webkit-backdrop-filter: blur(2.5px);
+        border-radius: 10px;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-top:50px;
+
+    }
+    .videoContainer {
+        padding-top:4em;
+    }
+    .whiteArrowContainer a span {
+        display:none;
+
+    }
+}
+
+
+@media (max-width: 850px) {
+    .houseDescriptionContainer {
+        display:none;
+    }
+    .houseSigil {
+        max-height:460px;
+        width:100%;
+    }
+    .houseText {
+        font-size: 4em;
+    }
+    .houseDescription {
+        font-size:1.2em;
+    }
+    .videoTitle {
+        font-size:2em;
+        padding-top:0;
+    }
+     .videoContainer {
+        min-height: 0vh;
+    }
+}
+
+
+@media (max-width: 550px) {
+    .houseDescriptionContainer {
+        display:none;
+    }
+    .houseDescriptionContainerMobile {
+       padding:20px; 
+       margin-left:12px;
+       margin-right: 12px;
+    }
+    .houseText {
+        font-size: 2em;
+    }
+    .houseDescription {
+        font-size:1em;
+    }
+    .videoTitle {
+        font-size:1.5em;
+        padding-top:0;
+    }
+    .houseImagesContainer2 {
+        display:none;
+    }
+
 }
